Navigation padding issue
Removed the white space above the navigation bar

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 /* Navbar Styling */
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 .navbar {
     background-color: #333;
-    padding: 10px;
+    padding: 8px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .logo {
@@ -47,7 +52,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30px;
+    width: 80px;
     height: 21px;
     cursor: pointer;
 }
@@ -102,7 +107,8 @@
     font-size: 2rem;
     margin-bottom: 15px;
     color: #333;
-    text-align: center; /* Center the heading */
+    text-align: center;
+    /* Center the heading */
 }
 
 .social-icons {
@@ -121,5 +127,6 @@
 }
 
 .social-icons img:hover {
-    transform: scale(1.1); /* Slightly enlarge the icon on hover */
+    transform: scale(1.1);
+    /* Slightly enlarge the icon on hover */
 }
